kyverno/policies/pods/AppArmor.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-apparmor-profiles
  annotations:
    policies.kyverno.io/title: Restrict AppArmor
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod, Annotation
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/description: >-
      On supported hosts, the 'runtime/default' AppArmor profile is applied by default.
      The default policy should prevent overriding or disabling the policy, or restrict
      overrides to an allowed set of profiles. This policy ensures Pods do not
      specify any other AppArmor profiles than `runtime/default` or `localhost/*`.
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  validations:
    - message: >-
        Specifying other AppArmor profiles is disallowed. The annotation
        `container.apparmor.security.beta.kubernetes.io` if defined
        must not be set to anything other than `runtime/default` or `localhost/*`.
      expression: >-
        !has(object.metadata.annotations) ||
        object.metadata.annotations.all(k, 
          !k.startsWith('container.apparmor.security.beta.kubernetes.io/') || 
          object.metadata.annotations[k] == 'runtime/default' || 
          object.metadata.annotations[k].startsWith('localhost/')
        )
