kyverno/policies/pods/hostPID.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-host-pid-pods
  annotations:
    policies.kyverno.io/title: Disallow HostPID Pods
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy ensures Pods cannot use host's PID.
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  validations:
    - message: >-
        HostPID pods are disallowed. The field spec.hostPID must be unset or
        set to `false`.
      expression: "!has(object.spec.hostPID) || object.spec.hostPID == false"
