kyverno/policies/pods/hostPaths.yaml
# Based on: https://kyverno.io/policies/other/limit-hostpath-vols/limit-hostpath-vols/
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: hostpath-vols
  annotations:
    policies.kyverno.io/title: Limit hostPath Volumes to Specific Directories
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      hostPath volumes consume the underlying node's file system. Mounting host
      paths should be disabled by default, except for specific cases
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  validations:
    - message: HostPath volumes are not allowed.
      expression: >-
        !has(object.spec.volumes) ||
        object.spec.volumes.all(v, !has(v.hostPath))
