kyverno/policies/pods/hostPorts.yaml
# https://kyverno.io/policies/pod-security/baseline/disallow-host-ports/disallow-host-ports/
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-host-ports
  annotations:
    policies.kyverno.io/title: Disallow hostPorts
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Access to host ports allows potential snooping of network traffic and should not be
      allowed, or at minimum restricted to a known list. This policy ensures the `hostPort`
      field is unset or set to `0`.
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  variables:
    - name: allContainers
      expression: >-
        object.spec.?containers.orValue([]) + 
        object.spec.?initContainers.orValue([]) + 
        object.spec.?ephemeralContainers.orValue([])
  validations:
    - message: >-
        Use of host ports is disallowed. The fields spec.containers[*].ports[*].hostPort
        , spec.initContainers[*].ports[*].hostPort, and spec.ephemeralContainers[*].ports[*].hostPort
        must either be unset or set to `0`.
      expression: >-
        variables.allContainers.all(c, 
          c.?ports.orValue([]).all(p, !has(p.hostPort) || p.hostPort == 0)
        )
