kyverno/policies/pods/procMount.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-proc-mount
  annotations:
    policies.kyverno.io/title: Disallow procMount
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The default /proc masks are set up to reduce attack surface and should be required. This policy
      ensures nothing but the default procMount can be specified. Note that in order for users
      to deviate from the `Default` procMount requires setting a feature gate at the API
      server.
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  variables:
    - name: allContainers
      expression: >-
        object.spec.?containers.orValue([]) + 
        object.spec.?initContainers.orValue([]) + 
        object.spec.?ephemeralContainers.orValue([])
  validations:
    - expression: >-
        variables.allContainers.all(c, 
          c.?securityContext.?procMount.orValue('Default') == 'Default'
        )
      messageExpression: >-
        'Changing the proc mount from the default is not allowed. The following containers have an invalid procMount: ' + 
        variables.allContainers.filter(c, c.?securityContext.?procMount.orValue('Default') != 'Default').map(c, c.name).join(', ')
