kyverno/policies/pods/revisionHistoryLimit.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-deployment-revision-history-limit
  annotations:
    policies.kyverno.io/description: >-
      The default revisionHistoryLimit for Deployments is 10:
      https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#revision-history-limit.
      This is there to allow users to manually undo rollouts when they need by
      scaling the previous ReplicaSet up and the latest down to 0 replicas. In
      environments where GitOps drive the CI/CD and effectively Deployment
      rollouts, the default of 10 is wasteful as there is no intention to use
      older ReplicaSets. Setting this to 2 so that we keep offering users the
      ability of manual rollbacks of a couple of versions, while helping store
      80% less ReplicaSets in our ETCD store. User's should be able to override
      if needed.
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
    - match:
        any:
          - resources:
              kinds:
                - Deployment
      mutate:
        patchStrategicMerge:
          spec:
            +(revisionHistoryLimit): 2 # +() will allow user to override by setting this attribute
        targets:
          - apiVersion: apps/v1
            kind: Deployment
      name: default-deployment-revisionHistoryLimit
