kyverno/policies/pods/sysctls.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-sysctls
  annotations:
    policies.kyverno.io/title: Restrict sysctls
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Sysctls can disable security mechanisms or affect all containers on a
      host, and should be disallowed except for an allowed "safe" subset. A
      sysctl is considered safe if it is namespaced in the container or the
      Pod, and it is isolated from other Pods or processes on the same Node.
      This policy ensures that only those "safe" subsets can be specified in
      a Pod.
spec:
  validationActions: [Deny]
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >-
        object.spec.?securityContext.?sysctls.orValue([]).all(s, 
          s.name in [
            'kernel.shm_rmid_forced', 
            'net.ipv4.ip_local_port_range', 
            'net.ipv4.ip_unprivileged_port_start', 
            'net.ipv4.tcp_syncookies', 
            'net.ipv4.ping_group_range'
          ]
        )
      messageExpression: >-
        'Setting additional sysctls above the allowed type is disallowed. Invalid sysctls found: ' + 
        object.spec.?securityContext.?sysctls.orValue([]).filter(s, !(s.name in [
          'kernel.shm_rmid_forced', 
          'net.ipv4.ip_local_port_range', 
          'net.ipv4.ip_unprivileged_port_start', 
          'net.ipv4.tcp_syncookies', 
          'net.ipv4.ping_group_range'
        ])).map(s, s.name).join(', ')
